<resources>
    <string name="app_name">精真估二手车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_articledetails">ArticledetailsActivity</string>
 	<string name="buy_car_default_srot">默认排序(时间)</string>
    <string name="buy_car_all_brand">全部品牌</string>
    <string name="buy_car_advanced_filter">高级筛选</string>
    <string name="buy_car">买车</string>
    <string name="my_concern">我的关注</string>
    <string name="empty_no_data">暂无相关数据~~~</string>
    <string name="about_jzg1">精真估创立于2014年3月，是国内最专业的二手车价值评估服务平台。基于海量真实市场成交数据和互联网大数据搜索与分析，为国内二手车行业的从业者及广大二手车消费者提供精准的车辆价值评估报告、二手车三年使用成本、新车五年使用成本等价值类产品。精真估网站正式上线后获得业内极大关注与好评，先后与多家知名汽车网站及业内相关企业达成合作，并获得易车网、美国KBB和中国汽车流通协会CADA三大机构千万级美金投资。</string>
    <string name="about_jzg2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;精真估拥有成熟的汽车价值评估模型与经验丰富的技术团队。同时，精真估以二手车三年使用成本、新车五年使用成本等二手车价值类产品为纽带，为C端消费者和二手车行业商户提供完善、公平的交易平台，提高交易的透明度和二手车商户诚信度。精真估在未来将不断开发和完善自身产品和服务，致力于为买卖双方提供更高效的二手车价值评估服务。</string>
    <string name="error_noData">数据返回失败，请重试。</string>
    <string name="error_noConnect">无法与服务器建立连接，请重试。</string>
    <string name="error_timeOut">请求超时，请重试。</string>
    <string name="error_net">网络不给力，请检查网络连接。</string>
    <string name="error_login">请先登录！</string>
    <string name="detail_valuation">详细估价>></string>
    <string name="menu_item_message_center">消息中心</string>
    <string name="menu_item_latest_activity">最新活动</string>
    <string name="menu_item_subscribe_car_source">订阅车源</string>
    <string name="menu_item_focus_on_car_source">收藏车源</string>
    <string name="menu_item_latest_news">最新资讯</string>
    <string name="menu_item_query_offence">违章查询</string>
    <string name="menu_item_car_replacement">车辆置换</string>
    <string name="menu_item_car_sell_progress">卖车进度</string>
    <string name="car_summary_info_select_car_brand">品牌车型</string>
    <string name="car_summary_info_home_select_car_brand_tip">请选择车辆信息</string>
    <string name="car_summary_info_select_car_register_date">上牌时间</string>
    <string name="car_summary_info_select_car_register_date_tip">请选择上牌时间</string>
    <string name="car_summary_info_select_car_mileage">行驶里程</string>
    <string name="car_summary_info_select_place">选择城市</string>
    <string name="car_summary_info_select_place_tip">请选择上牌城市</string>
</resources>